# tau2-observe

./: .env.example  .gitignore  LICENSE  README.md  cloudbuild.yaml  pyproject.toml
configs/: dashboards_agents.json  dashboards_operations.json  monitors.json  slos.json
data/tau2/domains/telecom/workflows/: dot_2_pdf.py
kimi_litellm_agent/: __init__.py  agent.json  agent.py  logging_config.py  server.py
kimi_litellm_agent/docker_setup/: Dockerfile  cloudbuild.yaml  deploy.sh  service.yaml
scripts/: emit_metrics.py  setup_datadog.py  traffic_generator.py
simple_gemini_agent/: __init__.py  agent.json  agent.py  logging_config.py  server.py
simple_gemini_agent/docker_setup/: .gcloudignore  Dockerfile  cloudbuild.yaml  deploy.sh  service.yaml
tau2_agent/: README.md  __init__.py  agent.json  agent.py  config.py  context.py  errors.py  llmobs_evaluations.py  logging_config.py  metrics.py  middleware.py  server.py  utils.py
tau2_agent/docker_setup/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  service.yaml
tau2_agent/scripts/: deploy.sh  setup-secrets.sh  test-deployment.sh
tau2_agent/streaming/: __init__.py  events.py  metadata.py  progress.py
tau2_agent/tools/: __init__.py  get_evaluation_results.py  list_domains.py  run_tau2_evaluation.py
