[project]
name = "tau2-observe"
version = "0.1.0"
description = "LLM Observability for tau2-bench using Datadog"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Tim Wu"}
]
keywords = ["llm", "observability", "datadog", "tau2", "evaluation"]

dependencies = [
    # The instrumented LLM application
    "tau2-bench-agent @ git+https://github.com/wuTims/tau2-bench-agent.git",

    # Core framework
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "pydantic>=2.0",
    "httpx>=0.28.0",

    # LLM and A2A
    "litellm>=1.65.0",
    "google-adk[a2a]>=1.18.0",
    "a2a-sdk[http-server]>=0.3.12",
    "tenacity>=9.0.0",

    # Data
    "pandas>=2.2.3",

    # Utilities
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.2",
    "toml>=0.10.2",
    "rich>=14.0.0",
    "fs>=2.4.16",
    "addict>=2.4.0",
    "docstring-parser>=0.16",
    "deepdiff>=8.4.2",
    "psutil>=7.0.0",
    "tabulate>=0.9.0",
    "watchdog>=6.0.0",

    # Gymnasium
    "gymnasium>=1.2.2",

    # GCP integration
    "google-cloud-secret-manager>=2.18.0",

    # Datadog LLM Observability
    "ddtrace>=4.0.0",
]

[project.urls]
Repository = "https://github.com/wuTims/tau2-observe"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tau2_agent", "simple_gemini_agent", "kimi_litellm_agent", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
